# ComfyUI-SendToEagle-w-Metadata

./: README.md  README_ja.md  __init__.py  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
py/: __init__.py  capture.py  hook.py  trace.py
py/defs/: __init__.py  combo.py  formatters.py  textencodes.py  validators.py
py/defs/ext/: easyuse_nodes.py  prompt_control.py  rgthree.py
py/nodes/: base.py  node.py
py/utils/: eagle_api.py
