[project]
name = "sendtoeagle-w-metadata"
description = "Sends images with metadata (PNGInfo) obtained from the input values of each node to Eagle. You can customize the tags to be registered in Eagle."
version = "1.0.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/watarika/ComfyUI-SendToEagle-w-Metadata"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "watarika"
DisplayName = "ComfyUI-SendToEagle-w-Metadata"
Icon = ""
